changed handler to accept array of questions
